# sample-backend

./: Dockerfile  docker-compose.yml  manage.py  pyproject.toml
aidanaBackend/: asgi.py  settings.py  urls.py  wsgi.py
backend/: admin.py  models.py  serializers.py  urls.py  views.py
backend/migrations/: 0001_initial.py
